* Fixed z-index of current time marker

--- a/asset/css/calendarbody.scss
+++ b/asset/css/calendarbody.scss
@@ -71,7 +71,7 @@
 
 #currentTimeMarker {
 	position:absolute;
-	z-index:200;
+	z-index:20;
 	height:2px;
 	width:100%;
 	pointer-events:none;
